<resources>
    <string name="app_name">CollegeInsta</string>
    <string name="Welcome">Welcome There !!</string>
    <string name="SignIn">Sign In To Continue!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">login</string>
    <string name="newRegistery">Register Yourself to Continue!</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="phoneNo">Phone Number</string>
    <string name="register">Register</string>
    <string name="alredy_registered">Alredy Registered? Login</string>
    <string name="about_app">About App</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="profileName">Mirza Farhan Baig</string>
    <string name="username_display">FarhantheNoob</string>
    <string name="posts">Posts</string>
    <string name="no_of_posts">0</string>
    <string name="following">Following</string>
    <string name="feeds">Feeds</string>
    <string name="search">Search</string>
    <string name="followers">Followers</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Home Fragment</string>
    <string name="workPlace">Working At</string>
    <string name="studying_at">Studying At</string>
    <string name="family_relation">Family Relation</string>
    <string name="city">City</string>
    <string name="searchBar">Search...</string>
</resources>